# jankvm

./: README.md
src/: CMakeLists.txt
src/interface/: CMakeLists.txt
src/interface/include/: ClassFileVerifier.hpp
src/interface/src/: ClassFileVerifier.cpp
src/jankvm/: CMakeLists.txt
src/jankvm/src/: main.cpp
src/utils/: CMakeLists.txt
src/utils/include/: data_utils.hpp
src/vm/: CMakeLists.txt
src/vm/include/: ClassFileParser.hpp  ConstantPool.hpp  ConstantPoolParser.hpp  Interpreter.hpp  JavaClass.hpp  JavaClassBuilder.hpp
src/vm/src/: ClassFileParser.cpp  ConstantPoolParser.cpp  Interpreter.cpp  JavaClass.cpp  JavaClassBuilder.cpp
src/vm/tests/: CMakeLists.txt  main.cpp  parserTests.cpp
testdata/: README.md  constantPool
